refactor: change styles project

--- a/src/Perechen.html
+++ b/src/Perechen.html
@@ -50,40 +50,39 @@
 </nav>
 
 <div class="container">
-    <h2 align="center">Перечень лабораторных работ</h2>
-    <div class="flex-container_perechen">
-        <div><a href="lab 1/lab-1.html"><img src="Images/lab1.jpg" class="responsive_perechen"><strong><em><br>Лабораторная
-            работа №1</br></em></strong></a>
-            <span>Детекция
-            движения</span>
-            <br>
-            <br>
-            <br>
+    <h2>Перечень лабораторных работ</h2>
+    <div class="flex-container-perechen">
+        <div class="perechen-work">
+            <img src="Images/lab1.jpg">
+            <a href="lab 1/lab-1.html">
+                <span>Лабораторная работа №1</span>
+            </a>
 
+            <span>Детекция движения</span>
         </div>
 
-        <div><a href="lab 2/lab-2.html"><img src="Images/lab2.png" class="responsive_perechen"><strong><em><br>Лабораторная
-            работа №2<br></em></strong></a>
-            <span>Детектирование и <br> распознавание  
-            лиц</span>
-            <br>
-            <br>
-
+        <div class="perechen-work">
+            <img src="Images/lab2.png">
+            <a href="lab 2/lab-2.html">
+                <span>Лабораторная работа №2</span>
+            </a>
+            <span>Детектирование и <br> распознавание лиц</span>
         </div>
 
-        <div><a href="lab 3/lab-3.html"><img src="Images/lab3.png" class="responsive_perechen"><strong><em><br>Лабораторная
-            работа №3<br></em></strong></a>
-            <span>Распознавание
-            автономеров</span>
-            <br>
-            <br>
-
+        <div class="perechen-work">
+            <img src="Images/lab3.png">
+            <a href="lab 3/lab-3.html">
+                <span>Лабораторная работа №3</span>
+            </a>
+            <span>Распознавание автономеров</span>
         </div>
 
-        <div><a href="lab 4/lab-4.html"><img src="Images/lab4.png" class="responsive_perechen"><strong><em><br>Лабораторная
-            работа №4</br></em></strong></a>
-            <span>Определение оставленных<br> предметов<span>
-
+        <div class="perechen-work">
+            <img src="Images/lab4.png">
+            <a href="lab 4/lab-4.html">
+                <span>Лабораторная работа №4</span>
+            </a>
+            <span>Определение оставленных<br> предметов</span>
         </div>
     </div>
 
