--- a/src/lab 4/lab-4.html
+++ b/src/lab 4/lab-4.html
@@ -22,7 +22,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
         <a class="navbar-brand" href="../Index.html">
-            <img src="../images/index/bsuir-logo.png">
+            <img src="../images/bsuir-logo.png">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
